--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -8,7 +8,7 @@
   <title>Vite + React + TS</title>
 </head>
 
-<body class="bg-[#EEEEEE]">
+<body class="bg-white">
   <div id="root" class="w-full"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
